--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.1157.0",
     "chrome-aws-lambda": "^10.1.0",
     "puppeteer-core": "^10.4.0"
   }
