Add sender and receiver email

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
 STOCKS = "B3SA3, ITUB4"
+
+# Verified email in AWS SES
+# Sender and receiver must be different, otherwise the email will not be received
+SENDER_EMAIL = ""
+RECEIVER_EMAIL = ""
