--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "puppeteer": "^13.7.0",
     "typescript": "^4.7.4"
   },
   "dependencies": {
     "aws-sdk": "^2.1157.0",
     "chrome-aws-lambda": "^10.1.0",
+    "puppeteer-core": "^13.7.0"
+  },
+  "overrides": {
     "puppeteer-core": "^13.7.0"
   }
 }
