Use framework version 3

--- a/serverless.yml
+++ b/serverless.yml
@@ -2,6 +2,8 @@ org: alvaromrveiga
 app: print-stocks-serverless
 service: print-stocks-serverless
 
+frameworkVersion: "3"
+
 useDotenv: true
 
 provider:
